--- a/templates/emails/welcome.html
+++ b/templates/emails/welcome.html
@@ -29,13 +29,6 @@
                                                             <tbody>
                                                                 <tr>
                                                                     <td class="esd-container-frame" width="570" valign="top" align="center">
-                                                                        <table width="100%" cellspacing="0" cellpadding="0">
-                                                                            <tbody>
-                                                                                <tr>
-                                                                                    <td align="center" class="esd-block-image" style="font-size: 0px;"><a target="_blank"><img class="adapt-img" src="https://ojwigi.stripocdn.email/content/guids/8c56545c-568e-4f85-8b66-533addddaf69/images/49841611553665491.jpeg" alt style="display: block;" width="233"></a></td>
-                                                                                </tr>
-                                                                            </tbody>
-                                                                        </table>
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
@@ -52,7 +45,7 @@
                                                                             <tbody>
                                                                                 <tr>
                                                                                     <td align="left" class="esd-block-text es-p20">
-                                                                                        <p style="color: #ffffff; font-size: 20px; font-family: -apple-system, blinkmacsystemfont, 'segoe ui', roboto, helvetica, arial, sans-serif, 'apple color emoji', 'segoe ui emoji', 'segoe ui symbol'; line-height: 120%;"><em>Hola {{username}}!&nbsp;</em><br>Estamos muy contento de que seas parte de nuestra comunidad, en la cuál buscamos que siempre estes satisfecho y seguro de realizar tus solicitudes de los servicios.</p>
+                                                                                        <p style="color: #ffffff; font-size: 20px; font-family: -apple-system, blinkmacsystemfont, 'segoe ui', roboto, helvetica, arial, sans-serif, 'apple color emoji', 'segoe ui emoji', 'segoe ui symbol'; line-height: 120%;"><em>Hola {{username}}!&nbsp;</em><br>Estamos muy contentos de que seas parte de nuestra comunidad, en la cuál buscamos que siempre estes satisfecho y seguro de realizar tus solicitudes de los servicios.</p>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
@@ -390,7 +383,7 @@
                                                                             <tbody>
                                                                                 <tr>
                                                                                     <td align="center" class="esd-block-text" bgcolor="#052434" esd-links-color="#2282B4">
-                                                                                        <p style="color: #ffffff; font-size: 20px; font-family: -apple-system, blinkmacsystemfont, 'segoe ui', roboto, helvetica, arial, sans-serif, 'apple color emoji', 'segoe ui emoji', 'segoe ui symbol';"><em>Visitianos en nuestra página web para más información <strong><a target="_blank" style="font-size: 20px; font-family: -apple-system, blinkmacsystemfont, &quot;segoe ui&quot;, roboto, helvetica, arial, sans-serif, &quot;apple color emoji&quot;, &quot;segoe ui emoji&quot;, &quot;segoe ui symbol&quot;; color: #2282b4;" href="https://www.google.com">link</a></strong></em></p>
+                                                                                        <p style="color: #ffffff; font-size: 20px; font-family: -apple-system, blinkmacsystemfont, 'segoe ui', roboto, helvetica, arial, sans-serif, 'apple color emoji', 'segoe ui emoji', 'segoe ui symbol';"><em>Visitianos en nuestra página web para más información <strong><a target="_blank" style="font-size: 20px; font-family: -apple-system, blinkmacsystemfont, &quot;segoe ui&quot;, roboto, helvetica, arial, sans-serif, &quot;apple color emoji&quot;, &quot;segoe ui emoji&quot;, &quot;segoe ui symbol&quot;; color: #2282b4;" href="https://www.vivefacil.app/home">link</a></strong></em></p>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
