--- a/templates/emails/enviarAlerta.html
+++ b/templates/emails/enviarAlerta.html
@@ -27,13 +27,6 @@
                                                             <tbody>
                                                                 <tr>
                                                                     <td class="esd-container-frame" width="570" valign="top" align="center">
-                                                                        <table width="100%" cellspacing="0" cellpadding="0">
-                                                                            <tbody>
-                                                                                <tr>
-                                                                                    <td align="center" class="esd-block-image" style="font-size: 0px;"><a target="_blank"><img class="adapt-img" src="https://ojwigi.stripocdn.email/content/guids/8c56545c-568e-4f85-8b66-533addddaf69/images/49841611553665491.jpeg" alt style="display: block;" width="233"></a></td>
-                                                                                </tr>
-                                                                            </tbody>
-                                                                        </table>
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
@@ -192,7 +185,7 @@
                                                                             <tbody>
                                                                                 <tr>
                                                                                     <td align="left" class="esd-block-text es-p15t es-p15b es-p10r">
-                                                                                        <p style="font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace; color: #ffffff;"><strong>Oficinas:&nbsp;</strong>Av. Perimetral Km 3. Espol - Campus Gustavo Galindo<br><strong>Telf:</strong> 0984834859</p>
+                                                                                        <p style="font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace; color: #ffffff;"><br><strong>Telf:</strong> 0989901326</p>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
@@ -225,7 +218,10 @@
                                                                             <tbody>
                                                                                 <tr>
                                                                                     <td align="center" class="esd-block-text" bgcolor="#052434" esd-links-color="#2282B4">
-                                                                                        <p style="color: #ffffff; font-size: 14px; font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace;"><em>Visitianos en nuestra página web para más información <strong><a target="_blank" style="font-size: 14px; font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace; color: #2282b4;">link</a></strong></em></p>
+                                                                                        <p style="color: #ffffff; font-size: 14px; font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace;"><em>Visitianos en nuestra página web para más información
+                                                                                        <strong><a
+                                                                                        href="https://www.vivefacil.app/home"
+                                                                                        style="font-size: 14px; font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace; color: #2282b4;">link</a></strong></em></p>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
