--- a/templates/emails/welcomeProveedor.html
+++ b/templates/emails/welcomeProveedor.html
@@ -223,16 +223,8 @@
                                                             class="esd-block-text es-p15t es-p15b es-p10r">
                                                             <p
                                                               style="font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace; color: #ffffff;">
-                                                              <strong>Oficinas:&nbsp;</strong>Av.
-                                                              Perimetral
-                                                              Km
-                                                              3.
-                                                              Espol
-                                                              -
-                                                              Campus
-                                                              Gustavo
-                                                              Galindo<br><strong>Telf:</strong>
-                                                              0984834859
+                                                              <br><strong>Telf:</strong>
+                                                              0989901326
                                                             </p>
                                                           </td>
                                                         </tr>
@@ -280,7 +272,7 @@
                                                                 para
                                                                 más
                                                                 información
-                                                                <strong><a target="_blank"
+                                                                <strong><a href="https://www.vivefacil.app/home"
                                                                     style="font-size: 14px; font-family: 'courier new', courier, 'lucida sans typewriter', 'lucida typewriter', monospace; color: #2282b4;">link</a></strong></em>
                                                             </p>
                                                           </td>
